--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             </table>
 
             <h3>Precio total: <span id="precioTotal">$0</span></h3>
-            <h3>Cuotas: <input id="cuotas" value="1" type="number" min="1" max="6" style="width:50px"> </h3> <br>
+            <h3>Cuotas: <input id="cuotas" value="1" type="number" min="1" max="6" style="width:50px"><em style="font-size:small; margin-left:2em">Entre 1 y 6</em></h3> <br>
+            <p id="cuotasError">Error. Número de cuotas incorrecto.</p>
             <button id="comprarButton" class="btn btn-primary" style="background-color: rgb(190, 7, 7); border-color:rgb(138, 2, 2)">
               <i class="fa fa-shopping-cart"></i> Comprar
             </button>
